<resources>
    <string name="app_name">ClaimChapChap</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello">Hello,</string>
    <string name="help_today">How may we help you today?</string>
    <string name="insurance_cover">What type of Insurance Cover would you like to get?</string>
    <string name="select_product">select the product type</string>
    <string name="comprehensive">Comprehensive</string>
    <string name="comprehensive_explanation">Loss or damage of insured vehicle from Accident, fire, theft and legal liabilities to third parties for bodily injury and property damages</string>
    <string name="third_party_fire_and_theft">Third Party Fire and Theft</string>
    <string name="tpft_explanatiion">Loss of insured vehicle due to fire or theft and legal liabilities to third parties for bodily injury and property damage.</string>
    <string name="third_party">Third Party</string>
    <string name="third_party_explanation">Legal liabilities caused to third parties for bodily injury or death and damage to property.</string>
    <string name="act_only_cover">Act Only Cover</string>
    <string name="ac_only_explanation">Legal liabilities to third parties for bodily injuries and death only</string>
    <string name="policies">Policies</string>
    <string name="claims">Claims</string>
    <string name="new_claim">New Claim</string>
    <string name="view_claim">View your claim information below</string>
    <string name="click">Click for details</string>
    <string name="view_policy">View Your Policy Covers Below</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button">Button</string>
    <string name="driver_one">Driver One</string>
    <string name="driver_two">Driver Two</string>
    <string name="comprehensive_motor_insurance_plan">Comprehensive Motor Insurance Plan</string>
    <string name="choose_comprehensive_cover">Choose Comprehensive Cover</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Second Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="todo">TODO</string>
    <string name="or_sign_up_with_social_media">Or sign up with social media</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="personal_information">Personal information</string>
    <string name="sign_in">Sign In</string>
    <string name="driver_s_license_no">Driver\'s License No</string>
    <string name="kra_pin">KRA PIN</string>
    <string name="national_id_no">National ID No</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="car_make">Car Make</string>
    <string name="car_model">Car Model</string>
    <string name="year_of_manufacture">Year of Manufacture</string>
    <string name="date_of_purchase">Date of Purchase</string>
    <string name="car_s_current_valuation">Car\'s Current Valuation</string>
    <string name="number_plate">Number Plate</string>
    <string name="final_quote">Final Quote</string>
    <string name="choose_your_payment_option">Choose your Payment Option</string>
    <string name="cvv_number">CVV Number</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="paybill_number">Paybill Number</string>
    <string name="premium_amount">Premium Amount</string>
    <string name="account_name">Account Name</string>
    <string name="card_payment">Card Payment</string>
    <string name="mobile_payment">Mobile Payment</string>
    <string name="username">Username</string>
    <string name="act_only_motor_insurance_plan">Act Only Motor Insurance Plan</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="bronze">Bronze</string>
    <string name="third_party_motor_insurance_plan">Third Party Motor Insurance Plan</string>
    <string name="please_enter_your_card_details">Please Enter your Card Details</string>
    <string name="please_enter_payment_details">Please Enter Payment Details</string>
    <string name="choose_thirdparty_cover">Choose ThirdParty Cover</string>
    <string name="third_party_fire_and_theft_plan">Third Party Fire and Theft Plan</string>
    <string name="collision_type">Collision Type</string>
    <string name="incident_type">Incident Type</string>
    <string name="accident_time">Accident Time</string>
    <string name="policy_number">Policy Number</string>
    <string name="location">Location</string>
    <string name="incident_severity">Incident Severity</string>
    <string name="authorities_contacted">Authorities Contacted</string>
    <string name="police_report_available">police Report Available</string>
    <string name="property_damage">Property Damage</string>
    <string name="bodily_injuries">Bodily Injuries</string>
    <string name="witnesses">Witnesses</string>
    <string name="select">Select</string>
    <string name="once_you_click_next_you_will_be_prompted_to_input_your_m_pesa_pin_please_do_so_accordingly">Once you click next you will be prompted to input your M-Pesa PIN please do so accordingly</string>
    <string name="make_a_claim">Make a Claim</string>
    <string name="confirm_your_claim">Confirm Your Claim</string>
    <string name="write_birth_certificate_in_national_id_field_for_minors">Write Birth Certificate in National ID field for minors</string>
    <string name="verify_your_account">Verify your Account</string>
    <string name="accident_information">Accident Information</string>
    <string name="choose_third_party_cover">Choose Third Party Cover</string>
    <string name="notifications">Notifications</string>
</resources>