<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".insurancePolicies.comprehensive.PersonalInformationFragment">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/personal_information"
        android:textColor="@color/red"
        android:textSize="35sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome">

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="0dp">

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/first_name" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/second_name" />
        </LinearLayout>

        <EditText
            android:id="@+id/dateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/nameLayout"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/date_of_birth"
            android:inputType="date" />

        <EditText
            android:id="@+id/idNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/dateOfBirth"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/national_id_no"
            android:inputType="number" />

        <EditText
            android:id="@+id/kra"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/idNumber"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/kra_pin"
            android:inputType="text" />

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/kra"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="number" />


        <EditText
            android:id="@+id/driversLicense"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/number"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/driver_s_license_no"
            android:inputType="phone" />

        <Button
            android:id="@+id/signIn"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_below="@+id/driversLicense"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="50dp"
            android:text="@string/next" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>