<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".insurancePolicies.comprehensive.VehicleDetailsFragment">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvPolicies"
            android:layout_width="365dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            android:text="@string/comprehensive_motor_insurance_plan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />
    </RelativeLayout>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/vehicle_details"
        android:textColor="@color/red"
        android:textSize="40sp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome">

        <LinearLayout
            android:id="@+id/nameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etCarMake"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/car_make" />

            <EditText
                android:id="@+id/etCarModel"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/car_model" />
        </LinearLayout>

        <EditText
            android:id="@+id/etManufactureYear"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/nameLayout"
            android:layout_alignParentStart="true"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/year_of_manufacture"
            android:inputType="date" />

        <EditText
            android:id="@+id/atPurchaseDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/etManufactureYear"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/date_of_purchase"
            android:inputType="date" />

        <EditText
            android:id="@+id/etValuation"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/atPurchaseDate"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/car_s_current_valuation"
            android:inputType="text" />

        <EditText
            android:id="@+id/etRegPlate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/etValuation"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/number_plate"
            android:inputType="text" />

        <Button
            android:id="@+id/button4"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_below="@+id/etRegPlate"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:text="@string/next" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>