<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".insurancePolicies.thirdParty.payment.BronzeCardPayment">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tvPolicies"
            android:layout_width="365dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            android:text="@string/third_party_motor_insurance_plan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />
    </RelativeLayout>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_enter_your_card_details"
        android:layout_marginTop="20dp"
        android:textColor="@color/red"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar" />

    <TextView
        android:id="@+id/welcome2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="thirdparty bronze"
        android:layout_marginTop="10dp"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome">

        <EditText
            android:id="@+id/etCardNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/card_number"
            android:inputType="number" />

        <EditText
            android:id="@+id/etHolderName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/etCardNumber"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/card_holder_name"
            android:inputType="phone" />

        <EditText
            android:id="@+id/etExpiryDate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/etHolderName"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/expiry_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/etCVV"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/etExpiryDate"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/cvv_number"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_below="@+id/etCVV"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:text="@string/next" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>