<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".insurancePolicies.comprehensive.payment.GoldCardPaymentFragment">

    <RelativeLayout
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backIcon"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/tvPolicies"
            android:layout_width="365dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:gravity="center"
            android:text="@string/comprehensive_motor_insurance_plan"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="normal" />
    </RelativeLayout>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/please_enter_your_card_details"
        android:layout_marginTop="20dp"
        android:textColor="@color/red"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/actionBar" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardNumberTil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="30dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/card_number"
                android:inputType="number"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cardHolderNameTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardNumberTil"
            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cardHolderName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/card_holder_name"
                android:inputType="number"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/expiryDateTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardHolderNameTil"
            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/expiryDate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/expiry_date"
                android:inputType="number"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cvvTil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/expiryDateTil"
            android:layout_marginTop="30dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/cvvNumber"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/cvv_number"
                android:inputType="number"
                android:paddingHorizontal="8dp"
                android:paddingVertical="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_below="@+id/cvvTil"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="50dp"
            android:text="@string/next" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>